# rpgm-translation-gui

./: .gitignore  .prettierrc  README-ru.md  README.md  eslint.config.js  input.css  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: запрос-функции.md  сообщение-об-ошибке.md
src/: about.html  about.ts  compile.html  compile.ts  enums.ts  global.d.ts  help.html  help.ts  hotkeys.ts  localization.ts  main.html  main.ts  options.ts  read.html  read.ts  settings.html  settings.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: about.json  compile.json  help.json  main.json  migrated.json  read.json  settings.json
src-tauri/res/: en.json  ru.json  themes.json
src-tauri/src/: main.rs  read.rs  write.rs
src/extensions/: functions.ts  htmlelement-extensions.ts  invokes.ts  localization.ts  math-extensions.ts
src/types/: enums.ts  global.d.ts
