[package]
name = "rpgm-translation-gui"
version = "3.10.2"
description = "A graphical interface that allows you to open RPG Maker games' text and edit it, then writing it back to the initial form."
authors = ["savannstm"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-execute", "dialog-open", "os-all", "window-close", "window-create", "dialog-message", "process-exit", "dialog-ask", "fs-write-file", "fs-create-dir", "fs-remove-file", "fs-read-dir", "fs-read-file", "fs-exists", "fs-copy-file", "fs-remove-dir", "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10.0"
regex = "1.10.4"
indexmap = "2.2.6"
xxhash-rust = { version = "0.8.11", features = ["xxh3"] }
sonic-rs = "0.3.8"
fastrand = "2.1.0"
lazy_static = "1.5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
