[package]
name = "rpgmtranslate"
version = "4.0.0"
description = "A graphical interface that allows you to open RPG Maker games' text and edit it, then writing it back to the initial form."
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.3", features = [ "protocol-asset"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rayon = "1.10.0"
regex = "1.11.0"
indexmap = "2.6.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
sonic-rs = "0.3.13"
fastrand = "2.1.1"
lazy_static = "1.5.0"
marshal-rs = { version = "0.3.0", features = ["sonic"] }
flate2 = "1.0.34"
encoding_rs = "0.8.34"
tauri-plugin-process = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-shell = "2.0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
